unpackaged/main/default/objects/ServiceTerritoryMember/fields/FSL_Mobile_Data__c.field-meta.xml
<CustomField>
    <fullName>FSL_Mobile_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSL Mobile Data</label>
    <type>Checkbox</type>
</CustomField>