unpackaged/main/default/objects/ServiceTerritoryMember/fields/SDO_SFS_Capacity_Based_Resource__c.field-meta.xml
<CustomField>
    <fullName>SDO_SFS_Capacity_Based_Resource__c</fullName>
    <formula>ServiceResource.IsCapacityBased</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Based Resource</label>
    <type>Checkbox</type>
</CustomField>