unpackaged/main/default/objects/ServiceTerritoryMember/fields/SDO_SFS_Non_Capacity_Based_Resource__c.field-meta.xml
<CustomField>
    <fullName>SDO_SFS_Non_Capacity_Based_Resource__c</fullName>
    <formula>NOT(SDO_SFS_Capacity_Based_Resource__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Capacity Based Resource</label>
    <type>Checkbox</type>
</CustomField>