unpackaged/main/default/objects/ServiceTerritoryMember/fields/Service_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Name__c</fullName>
    <formula>ServiceResource.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resource Name</label>
    <type>Text</type>
</CustomField>