unpackaged/main/default/objects/ServiceTerritoryMember/validationRules/FSLDemoTools_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>FSLDemoTools_Fields</fullName>
    <active>false</active>
    <errorConditionFormula>SDO_Tool_FSLDemoTools_Master_Data__c</errorConditionFormula>
    <errorMessage>Can&#39;t edit the FSLDemoTools Master data</errorMessage>
</ValidationRule>